@@ -1,3 +1,7 @@
+2012-02-11
+ * finished new guide.py
+ * S, waitidle script commands
+
 2012-02-02
  * center calculations
 
